--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
       <a class="logo-footer link" href="./index.html"
         >WEB<span class="text-logo-footer">STUDIO</span></a>
       <p class="text-footer">
-        Increase the flow of customers and <br>
-        sales for your business with digital <br>
+        Increase the flow of customers and
+        sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
