--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body class="page">
     <!--шапка сторінки-->
     <header class="page-header">
+      <div class="container">
       <nav class="page-nav">
         <a class="logo link" href="./index.html"
           >WEB<span class="text-logo">STUDIO</span></a>
@@ -40,16 +42,21 @@
           >
         </li>
       </ul>
+    </div>
     </header>
+    <div class="container"></div>
     <main class="content">
       <!--заголовок і кнопка-->
       <section class="hero">
+        <div class="container">
         <h1 class="hero-title">Effective Solutions <br>for Your Business</h1>
 
         <button class="btn" type="button">Order Service</button>
+      </div>
       </section>
       <!--Можлививй прихований заголовок 2-го типу. Перша секція тексту-->
       <section class="section-work">
+        <div class="container">
         <h2 class="hided">What We Teach</h2>
         <ul class="works-list list">
           <li>
@@ -81,10 +88,12 @@
             </p>
           </li>
         </ul>
+      </div>
       </section>
 
       <!--список з першими фото-->
       <section class="section-app">
+        <div class="container">
         <h2 class="secondary-title">What Are We Doing</h2>
         <ul class="apps-list list">
           <li class="apps-list-item">
@@ -97,10 +106,12 @@
             <img src="./images/img3.jpg" alt="mobile phone" width="360">
           </li>
         </ul>
+      </div>
       </section>
 
       <!--список з учасниками-->
       <section class="section-team">
+        <div class="container">
         <h2 class="secondary-title">Our Team</h2>
         <ul class="team-list list">
           <li class="team-list-item">
@@ -124,10 +135,12 @@
             <p class="team-text">UI Designer</p>
           </li>
         </ul>
+      </div>
       </section>
     </main>
     <!--підвал, але без посилань-->
     <footer class="page-footer">
+      <div class="container">
       <a class="logo-footer link" href="./index.html"
         >WEB<span class="text-logo-footer">STUDIO</span></a>
       <p class="text-footer">
@@ -135,6 +148,7 @@
         sales for your business with digital
         marketing & growth solutions.
       </p>
+    </div>
     </footer>
   </body>
 </html>
