--- a/portfolio.html
+++ b/portfolio.html
@@ -8,11 +8,13 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body class="body">
     <!-- хедер такий як у індекс -->
     <header class="page-header">
+      <div class="container">
       <nav class="page-nav">
         <a class="logo link" href="./index.html"
           >WEB<span class="text-logo">STUDIO</span></a>
@@ -40,28 +42,30 @@
           >
         </li>
       </ul>
+    </div>
     </header>
 
     <main class="content">
       <section class="portfolio">
+        <div class="container">
         <!-- зіголовок який потім приховається -->
         <h1 class="hided">What We Do</h1>
         <!--фільтр робіт-->
         <ul class="filter-btn list">
           <li>
-            <button class="btn" type="button">All</button>
+            <button class="btn-filter" type="button">All</button>
           </li>
           <li>
-            <button class="btn" type="button">Web Site</button>
+            <button class="btn-filter" type="button">Web Site</button>
           </li>
           <li>
-            <button class="btn" type="button">App</button>
+            <button class="btn-filter" type="button">App</button>
           </li>
           <li>
-            <button class="btn" type="button">Design</button>
+            <button class="btn-filter" type="button">Design</button>
           </li>
           <li>
-            <button class="btn" type="button">Marketing</button>
+            <button class="btn-filter" type="button">Marketing</button>
           </li>
         </ul>
 
@@ -165,10 +169,12 @@
             </a>
           </li>
         </ul>
+      </div>
       </section>
     </main>
     <!-- футер такий як у індекс -->
     <footer class="page-footer">
+      <div class="container">
       <a class="logo-footer link" href="./index.html"
         >WEB<span class="text-logo-footer">STUDIO</span></a>
       <p class="text-footer">
@@ -176,6 +182,7 @@
         sales for your business with digital <br>
         marketing & growth solutions.
       </p>
+    </div>
     </footer>
   </body>
 </html>
