--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
     </header>
 
     <main class="content">
-      <section class="portfolio">
+      <section class="section-portfolio">
         <div class="container">
         <!-- зіголовок який потім приховається -->
         <h1 class="hided">What We Do</h1>
@@ -178,8 +178,8 @@
       <a class="logo-footer link" href="./index.html"
         >WEB<span class="text-logo-footer">STUDIO</span></a>
       <p class="text-footer">
-        Increase the flow of customers and <br>
-        sales for your business with digital <br>
+        Increase the flow of customers and
+        sales for your business with digital
         marketing & growth solutions.
       </p>
     </div>
