--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,8 @@
 
     <main class="content">
       <section class="section-portfolio">
-        <div class="container">
+        <!-- <div class="container-filter-btn"> -->
+          <div class="container">
         <!-- зіголовок який потім приховається -->
         <h1 class="hided">What We Do</h1>
         <!--фільтр робіт-->
@@ -68,6 +69,7 @@
             <button class="btn-filter" type="button">Marketing</button>
           </li>
         </ul>
+      <!-- </div> -->
 
         <ul class="list-works list">
           <li>
