--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body class="page">
     <!--шапка сторінки-->
     <header class="page-header">
-      <div class="container">
+      <div class="container con-header">
       <nav class="page-nav">
         <a class="logo link" href="./index.html"
           >WEB<span class="text-logo">STUDIO</span></a>
