--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--шапка сторінки-->
     <header class="page-header">
       <div class="container con-header">
-      <nav class="page-nav">
+      <nav class="page-nav con-header">
         <a class="logo link" href="./index.html"
           >WEB<span class="text-logo">STUDIO</span></a>
         <ul class="menu list">
