--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         </ul>
       </nav>
       <ul class="menu-contacts list">
-        <li>
-          <a class="contact-phone link" href="mailto:info@devstudio.com"
+        <li class="menu-item">
+          <a class="contact-mail link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
-        <li>
-          <a class="contact-mail link" href="tel:+110001111111"
+        <li class="menu-item">
+          <a class="contact-phone link" href="tel:+110001111111"
             >+11 (000) 111-11-11</a
           >
         </li>
@@ -59,28 +59,28 @@
         <div class="container">
         <h2 class="hided">What We Teach</h2>
         <ul class="works-list list">
-          <li>
+          <li class="works-list-item">
             <h3 class="works-title">Strategy</h3>
             <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
+          <li class="works-list-item">
             <h3 class="works-title">Punctuality</h3>
             <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="works-list-item">
             <h3 class="works-title">Diligence</h3>
             <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
+          <li class="works-list-item">
             <h3 class="works-title">Technologies</h3>
             <p class="text">
               Design practice focused on digital experiences. We bring forth a
