--- a/portfolio.html
+++ b/portfolio.html
@@ -14,8 +14,8 @@
   <body class="body">
     <!-- хедер такий як у індекс -->
     <header class="page-header">
-      <div class="container">
-      <nav class="page-nav">
+      <div class="container con-header">
+      <nav class="page-nav con-header">
         <a class="logo link" href="./index.html"
           >WEB<span class="text-logo">STUDIO</span></a>
         <ul class="menu list">
@@ -31,13 +31,13 @@
         </ul>
       </nav>
       <ul class="menu-contacts list">
-        <li>
-          <a class="contact-phone link" href="mailto:info@devstudio.com"
+        <li class="menu-item">
+          <a class="contact-mail link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
-        <li>
-          <a class="contact-mail link" href="tel:+110001111111"
+        <li class="menu-item">
+          <a class="contact-phone link" href="tel:+110001111111"
             >+11 (000) 111-11-11</a
           >
         </li>
@@ -53,26 +53,26 @@
         <h1 class="hided">What We Do</h1>
         <!--фільтр робіт-->
         <ul class="filter-btn list">
-          <li>
+          <li class="filter-btn-item">
             <button class="btn-filter" type="button">All</button>
           </li>
-          <li>
+          <li class="filter-btn-item">
             <button class="btn-filter" type="button">Web Site</button>
           </li>
-          <li>
+          <li class="filter-btn-item">
             <button class="btn-filter" type="button">App</button>
           </li>
-          <li>
+          <li class="filter-btn-item">
             <button class="btn-filter" type="button">Design</button>
           </li>
-          <li>
+          <li class="filter-btn-item">
             <button class="btn-filter" type="button">Marketing</button>
           </li>
         </ul>
       <!-- </div> -->
 
         <ul class="list-works list">
-          <li>
+          <li class="list-works-item">
             <a class="link" href="">
               <img
                 class="img"
@@ -82,7 +82,7 @@
               <p class="text">App</p>
             </a>
           </li>
-          <li>
+          <li class="list-works-item">
             <a class="link" href="">
               <img
                 class="img"
@@ -93,7 +93,7 @@
               <p class="text">Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="list-works-item">
             <a class="link" href="">
               <img
                 class="img"
@@ -104,7 +104,7 @@
               <p class="text">App</p>
             </a>
           </li>
-          <li>
+          <li class="list-works-item">
             <a class="link" href="">
               <img
                 class="img"
@@ -115,7 +115,7 @@
               <p class="text">Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="list-works-item">
             <a class="link" href="">
               <img
                 class="img"
@@ -126,7 +126,7 @@
               <p class="text">Design</p>
             </a>
           </li>
-          <li>
+          <li class="list-works-item">
             <a class="link" href="">
               <img
                 class="img"
@@ -137,7 +137,7 @@
               <p class="text">Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="list-works-item">
             <a class="link" href="">
               <img
                 class="img"
@@ -148,7 +148,7 @@
               <p class="text">Design</p>
             </a>
           </li>
-          <li>
+          <li class="list-works-item">
             <a class="link" href="">
               <img
                 class="img"
@@ -159,7 +159,7 @@
               <p class="text">Web Site</p>
             </a>
           </li>
-          <li>
+          <li class="list-works-item">
             <a class="link" href="">
               <img
                 class="img"
