--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
         <h2 class="secondary-title">What Are We Doing</h2>
         <ul class="apps-list list">
           <li class="apps-list-item">
-            <img src="./images/img1.jpg" alt="personal computer" width="360">
+            <img class="img-index" src="./images/img1.jpg" alt="personal computer" width="360">
           </li>
           <li class="apps-list-item">
-            <img src="./images/img2.jpg" alt="app for phone" width="360">
+            <img class="img-index" src="./images/img2.jpg" alt="app for phone" width="360">
           </li>
           <li class="apps-list-item">
-            <img src="./images/img3.jpg" alt="mobile phone" width="360">
+            <img class="img-index" src="./images/img3.jpg" alt="mobile phone" width="360">
           </li>
         </ul>
       </div>
@@ -115,22 +115,22 @@
         <h2 class="secondary-title">Our Team</h2>
         <ul class="team-list list">
           <li class="team-list-item">
-            <img src="./images/img4.jpg" alt="our designer" width="264">
+            <img class="img-index" src="./images/img4.jpg" alt="our designer" width="264">
             <h3 class="team-title">Mark Guerrero</h3>
             <p class="team-text">Product Designer</p>
           </li>
           <li class="team-list-item">
-            <img src="./images/img5.jpg" alt="our developer" width="264">
+            <img class="img-index" src="./images/img5.jpg" alt="our developer" width="264">
             <h3 class="team-title">Tom Ford</h3>
             <p class="team-text">Frontend Developer</p>
           </li>
           <li class="team-list-item">
-            <img src="./images/img6.jpg" alt="our marketing" width="264">
+            <img class="img-index" src="./images/img6.jpg" alt="our marketing" width="264">
             <h3 class="team-title">Camila Garcia</h3>
             <p class="team-text">Marketing</p>
           </li>
           <li class="team-list-item">
-            <img src="./images/img7.jpg" alt="our ul designer" width="264">
+            <img class="img-index" src="./images/img7.jpg" alt="our ul designer" width="264">
             <h3 class="team-title">Daniel Wilson</h3>
             <p class="team-text">UI Designer</p>
           </li>
