--- a/index.html
+++ b/index.html
@@ -60,32 +60,40 @@
         <h2 class="hided">What We Teach</h2>
         <ul class="works-list list">
           <li class="works-list-item">
+            <div class="text-block">
             <h3 class="works-title">Strategy</h3>
             <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
+          </div>
           </li>
           <li class="works-list-item">
+            <div class="text-block">
             <h3 class="works-title">Punctuality</h3>
             <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
+          </div>
           </li>
           <li class="works-list-item">
+            <div class="text-block">
             <h3 class="works-title">Diligence</h3>
             <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
+          </div>
           </li>
           <li class="works-list-item">
+            <div class="text-block">
             <h3 class="works-title">Technologies</h3>
             <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
+          </div>
           </li>
         </ul>
       </div>
@@ -97,13 +105,13 @@
         <h2 class="secondary-title">What Are We Doing</h2>
         <ul class="apps-list list">
           <li class="apps-list-item">
-            <img class="img-index" src="./images/img1.jpg" alt="personal computer" width="360">
+            <img class="img-app" src="./images/img1.jpg" alt="personal computer" width="360">
           </li>
           <li class="apps-list-item">
-            <img class="img-index" src="./images/img2.jpg" alt="app for phone" width="360">
+            <img class="img-app" src="./images/img2.jpg" alt="app for phone" width="360">
           </li>
           <li class="apps-list-item">
-            <img class="img-index" src="./images/img3.jpg" alt="mobile phone" width="360">
+            <img class="img-app" src="./images/img3.jpg" alt="mobile phone" width="360">
           </li>
         </ul>
       </div>
@@ -115,22 +123,22 @@
         <h2 class="secondary-title">Our Team</h2>
         <ul class="team-list list">
           <li class="team-list-item">
-            <img class="img-index" src="./images/img4.jpg" alt="our designer" width="264">
+            <img class="img" src="./images/img4.jpg" alt="our designer" width="264">
             <h3 class="team-title">Mark Guerrero</h3>
             <p class="team-text">Product Designer</p>
           </li>
           <li class="team-list-item">
-            <img class="img-index" src="./images/img5.jpg" alt="our developer" width="264">
+            <img class="img" src="./images/img5.jpg" alt="our developer" width="264">
             <h3 class="team-title">Tom Ford</h3>
             <p class="team-text">Frontend Developer</p>
           </li>
           <li class="team-list-item">
-            <img class="img-index" src="./images/img6.jpg" alt="our marketing" width="264">
+            <img class="img" src="./images/img6.jpg" alt="our marketing" width="264">
             <h3 class="team-title">Camila Garcia</h3>
             <p class="team-text">Marketing</p>
           </li>
           <li class="team-list-item">
-            <img class="img-index" src="./images/img7.jpg" alt="our ul designer" width="264">
+            <img class="img" src="./images/img7.jpg" alt="our ul designer" width="264">
             <h3 class="team-title">Daniel Wilson</h3>
             <p class="team-text">UI Designer</p>
           </li>
@@ -143,11 +151,13 @@
       <div class="container">
       <a class="logo-footer link" href="./index.html"
         >WEB<span class="text-logo-footer">STUDIO</span></a>
+        <div class="text-block">
       <p class="text-footer">
         Increase the flow of customers and
         sales for your business with digital
         marketing & growth solutions.
       </p>
+    </div>
     </div>
     </footer>
   </body>
