--- a/portfolio.html
+++ b/portfolio.html
@@ -68,6 +68,7 @@
             <button class="btn-filter" type="button">Marketing</button>
           </li>
         </ul>
+        <div>
         <ul class="list-works list">
           <li class="list-works-item">
             <a class="link" href="">
@@ -169,6 +170,7 @@
           </li>
         </ul>
       </div>
+      </div>
       </section>
     </main>
     <!-- футер такий як у індекс -->
@@ -176,11 +178,13 @@
       <div class="container">
       <a class="logo-footer link" href="./index.html"
         >WEB<span class="text-logo-footer">STUDIO</span></a>
+        <div class="text-block">
       <p class="text-footer">
         Increase the flow of customers and
         sales for your business with digital
         marketing & growth solutions.
       </p>
+      </div>
     </div>
     </footer>
   </body>
