--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@
                 src="./images/img11.jpg"
                 alt="Bank App screens">
               <h2 class="title-list-works">Banking App Interface Concept</h2>
-              <p class="text">App</p>
+              <p class="text-list-works">App</p>
             </a>
           </li>
           <li class="list-works-item">
@@ -88,7 +88,7 @@
                 alt="blue ground"
                 width="360">
               <h2 class="title-list-works">Cashless Payment</h2>
-              <p class="text">Marketing</p>
+              <p class="text-list-works">Marketing</p>
             </a>
           </li>
           <li class="list-works-item">
@@ -99,7 +99,7 @@
                 alt="App for PC and Handy"
                 width="360">
               <h2 class="title-list-works">Meditaion App</h2>
-              <p class="text">App</p>
+              <p class="text-list-works">App</p>
             </a>
           </li>
           <li class="list-works-item">
@@ -110,7 +110,7 @@
                 alt="Car salon"
                 width="360">
               <h2 class="title-list-works">Taxi Service</h2>
-              <p class="text">Marketing</p>
+              <p class="text-list-works">Marketing</p>
             </a>
           </li>
           <li class="list-works-item">
@@ -121,7 +121,7 @@
                 alt="Screenlocks"
                 width="360">
               <h2 class="title-list-works">Screen Illustrations</h2>
-              <p class="text">Design</p>
+              <p class="text-list-works">Design</p>
             </a>
           </li>
           <li class="list-works-item">
@@ -132,7 +132,7 @@
                 alt="Girl listen music"
                 width="360">
               <h2 class="title-list-works">Online Courses</h2>
-              <p class="text">Marketing</p>
+              <p class="text-list-works">Marketing</p>
             </a>
           </li>
           <li class="list-works-item">
@@ -143,7 +143,7 @@
                 alt="Design screens in App"
                 width="360">
               <h2 class="title-list-works">Instagram Stories Concept</h2>
-              <p class="text">Design</p>
+              <p class="text-list-works">Design</p>
             </a>
           </li>
           <li class="list-works-item">
@@ -154,7 +154,7 @@
                 alt="Vegetables in a bag"
                 width="360">
               <h2 class="title-list-works">Organic Food</h2>
-              <p class="text">Web Site</p>
+              <p class="text-list-works">Web Site</p>
             </a>
           </li>
           <li class="list-works-item">
@@ -165,7 +165,7 @@
                 alt="Making coffee"
                 width="360">
               <h2 class="title-list-works">Fresh Coffee</h2>
-              <p class="text">Web Site</p>
+              <p class="text-list-works">Web Site</p>
             </a>
           </li>
         </ul>
