--- a/portfolio.html
+++ b/portfolio.html
@@ -7,185 +7,201 @@
     <title>Portfolio</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet">
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.css">
+      rel="stylesheet"
+    >
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.css"
+    >
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body class="body">
     <!-- хедер такий як у індекс -->
     <header class="page-header">
       <div class="container con-header">
-      <nav class="page-nav con-header">
-        <a class="logo link" href="./index.html"
-          >WEB<span class="text-logo">STUDIO</span></a>
-        <ul class="menu list">
+        <nav class="page-nav con-header">
+          <a class="logo link" href="./index.html"
+            >WEB<span class="text-logo">STUDIO</span></a
+          >
+          <ul class="menu list">
+            <li class="menu-item">
+              <a class="menu-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link link" href="./Contacts">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="menu-contacts list">
           <li class="menu-item">
-            <a class="menu-link link" href="./index.html">Studio</a>
+            <a class="contact-mail link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="menu-item">
-            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link link" href="./Contacts">Contacts</a>
+            <a class="contact-phone link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
-      </nav>
-      <ul class="menu-contacts list">
-        <li class="menu-item">
-          <a class="contact-mail link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="menu-item">
-          <a class="contact-phone link" href="tel:+110001111111"
-            >+11 (000) 111-11-11</a
-          >
-        </li>
-      </ul>
-    </div>
+      </div>
     </header>
 
     <main class="content">
       <section class="section-portfolio">
-          <div class="container">
-        <!-- зіголовок який потім приховається -->
-        <h1 class="hided">What We Do</h1>
-        <!--фільтр робіт-->
-        <ul class="filter-btn list">
-          <li class="filter-btn-item">
-            <button class="btn-filter" type="button">All</button>
-          </li>
-          <li class="filter-btn-item">
-            <button class="btn-filter" type="button">Web Site</button>
-          </li>
-          <li class="filter-btn-item">
-            <button class="btn-filter" type="button">App</button>
-          </li>
-          <li class="filter-btn-item">
-            <button class="btn-filter" type="button">Design</button>
-          </li>
-          <li class="filter-btn-item">
-            <button class="btn-filter" type="button">Marketing</button>
-          </li>
-        </ul>
-        <div>
-        <ul class="list-works list">
-          <li class="list-works-item">
-            <a class="link" href="">
-              <img
-                class="img"
-                src="./images/img11.jpg"
-                alt="Bank App screens">
-              <h2 class="title-list-works">Banking App Interface Concept</h2>
-              <p class="text-list-works">App</p>
-            </a>
-          </li>
-          <li class="list-works-item">
-            <a class="link" href="">
-              <img
-                class="img"
-                src="./images/img22.jpg"
-                alt="blue ground"
-                width="360">
-              <h2 class="title-list-works">Cashless Payment</h2>
-              <p class="text-list-works">Marketing</p>
-            </a>
-          </li>
-          <li class="list-works-item">
-            <a class="link" href="">
-              <img
-                class="img"
-                src="./images/img33.jpg"
-                alt="App for PC and Handy"
-                width="360">
-              <h2 class="title-list-works">Meditaion App</h2>
-              <p class="text-list-works">App</p>
-            </a>
-          </li>
-          <li class="list-works-item">
-            <a class="link" href="">
-              <img
-                class="img"
-                src="./images/img44.jpg"
-                alt="Car salon"
-                width="360">
-              <h2 class="title-list-works">Taxi Service</h2>
-              <p class="text-list-works">Marketing</p>
-            </a>
-          </li>
-          <li class="list-works-item">
-            <a class="link" href="">
-              <img
-                class="img"
-                src="./images/img55.jpg"
-                alt="Screenlocks"
-                width="360">
-              <h2 class="title-list-works">Screen Illustrations</h2>
-              <p class="text-list-works">Design</p>
-            </a>
-          </li>
-          <li class="list-works-item">
-            <a class="link" href="">
-              <img
-                class="img"
-                src="./images/img66.jpg"
-                alt="Girl listen music"
-                width="360">
-              <h2 class="title-list-works">Online Courses</h2>
-              <p class="text-list-works">Marketing</p>
-            </a>
-          </li>
-          <li class="list-works-item">
-            <a class="link" href="">
-              <img
-                class="img"
-                src="./images/img77.jpg"
-                alt="Design screens in App"
-                width="360">
-              <h2 class="title-list-works">Instagram Stories Concept</h2>
-              <p class="text-list-works">Design</p>
-            </a>
-          </li>
-          <li class="list-works-item">
-            <a class="link" href="">
-              <img
-                class="img"
-                src="./images/img88.jpg"
-                alt="Vegetables in a bag"
-                width="360">
-              <h2 class="title-list-works">Organic Food</h2>
-              <p class="text-list-works">Web Site</p>
-            </a>
-          </li>
-          <li class="list-works-item">
-            <a class="link" href="">
-              <img
-                class="img"
-                src="./images/img99.jpg"
-                alt="Making coffee"
-                width="360">
-              <h2 class="title-list-works">Fresh Coffee</h2>
-              <p class="text-list-works">Web Site</p>
-            </a>
-          </li>
-        </ul>
-      </div>
-      </div>
+        <div class="container">
+          <!-- зіголовок який потім приховається -->
+          <h1 class="hided">What We Do</h1>
+          <!--фільтр робіт-->
+          <ul class="filter-btn list">
+            <li class="filter-btn-item">
+              <button class="btn-filter" type="button">All</button>
+            </li>
+            <li class="filter-btn-item">
+              <button class="btn-filter" type="button">Web Site</button>
+            </li>
+            <li class="filter-btn-item">
+              <button class="btn-filter" type="button">App</button>
+            </li>
+            <li class="filter-btn-item">
+              <button class="btn-filter" type="button">Design</button>
+            </li>
+            <li class="filter-btn-item">
+              <button class="btn-filter" type="button">Marketing</button>
+            </li>
+          </ul>
+          <div>
+            <ul class="list-works list">
+              <li class="list-works-item">
+                <a class="link" href="">
+                  <img
+                    class="img"
+                    src="./images/img11.jpg"
+                    alt="Bank App screens"
+                  >
+                  <h2 class="title-list-works">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="text-list-works">App</p>
+                </a>
+              </li>
+              <li class="list-works-item">
+                <a class="link" href="">
+                  <img
+                    class="img"
+                    src="./images/img22.jpg"
+                    alt="blue ground"
+                    width="360"
+                  >
+                  <h2 class="title-list-works">Cashless Payment</h2>
+                  <p class="text-list-works">Marketing</p>
+                </a>
+              </li>
+              <li class="list-works-item">
+                <a class="link" href="">
+                  <img
+                    class="img"
+                    src="./images/img33.jpg"
+                    alt="App for PC and Handy"
+                    width="360"
+                  >
+                  <h2 class="title-list-works">Meditaion App</h2>
+                  <p class="text-list-works">App</p>
+                </a>
+              </li>
+              <li class="list-works-item">
+                <a class="link" href="">
+                  <img
+                    class="img"
+                    src="./images/img44.jpg"
+                    alt="Car salon"
+                    width="360"
+                  >
+                  <h2 class="title-list-works">Taxi Service</h2>
+                  <p class="text-list-works">Marketing</p>
+                </a>
+              </li>
+              <li class="list-works-item">
+                <a class="link" href="">
+                  <img
+                    class="img"
+                    src="./images/img55.jpg"
+                    alt="Screenlocks"
+                    width="360"
+                  >
+                  <h2 class="title-list-works">Screen Illustrations</h2>
+                  <p class="text-list-works">Design</p>
+                </a>
+              </li>
+              <li class="list-works-item">
+                <a class="link" href="">
+                  <img
+                    class="img"
+                    src="./images/img66.jpg"
+                    alt="Girl listen music"
+                    width="360"
+                  >
+                  <h2 class="title-list-works">Online Courses</h2>
+                  <p class="text-list-works">Marketing</p>
+                </a>
+              </li>
+              <li class="list-works-item">
+                <a class="link" href="">
+                  <img
+                    class="img"
+                    src="./images/img77.jpg"
+                    alt="Design screens in App"
+                    width="360"
+                  >
+                  <h2 class="title-list-works">Instagram Stories Concept</h2>
+                  <p class="text-list-works">Design</p>
+                </a>
+              </li>
+              <li class="list-works-item">
+                <a class="link" href="">
+                  <img
+                    class="img"
+                    src="./images/img88.jpg"
+                    alt="Vegetables in a bag"
+                    width="360"
+                  >
+                  <h2 class="title-list-works">Organic Food</h2>
+                  <p class="text-list-works">Web Site</p>
+                </a>
+              </li>
+              <li class="list-works-item">
+                <a class="link" href="">
+                  <img
+                    class="img"
+                    src="./images/img99.jpg"
+                    alt="Making coffee"
+                    width="360"
+                  >
+                  <h2 class="title-list-works">Fresh Coffee</h2>
+                  <p class="text-list-works">Web Site</p>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
     </main>
     <!-- футер такий як у індекс -->
     <footer class="page-footer">
       <div class="container">
-      <a class="logo-footer link" href="./index.html"
-        >WEB<span class="text-logo-footer">STUDIO</span></a>
+        <a class="logo-footer link" href="./index.html"
+          >WEB<span class="text-logo-footer">STUDIO</span></a
+        >
         <div class="text-block">
-      <p class="text-footer">
-        Increase the flow of customers and
-        sales for your business with digital
-        marketing & growth solutions.
-      </p>
+          <p class="text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
       </div>
-    </div>
     </footer>
   </body>
 </html>
