--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <button class="btn" type="button">Order Service</button>
         </div>
       </section>
-      <!--Можлививй прихований заголовок 2-го типу. Перша секція тексту-->
+      <!--прихований заголовок 2-го типу. Перша секція тексту-->
       <section class="section-work">
         <div class="container">
           <h2 class="hided">What We Teach</h2>
