--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
     <main class="content">
       <section class="section-portfolio">
         <div class="container">
-          <!-- зіголовок який потім приховається -->
+          <!-- прихований заголовок -->
           <h1 class="hided">What We Do</h1>
           <!--фільтр робіт-->
           <ul class="filter-btn list">
