--- a/portfolio.html
+++ b/portfolio.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Portfolio</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.css"
     >
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" >
   </head>
   <body class="body">
     <!-- хедер такий як у індекс -->
@@ -73,119 +73,135 @@
               <button class="btn-filter" type="button">Marketing</button>
             </li>
           </ul>
-          <div>
-            <ul class="list-works list">
-              <li class="list-works-item">
-                <a class="link" href="">
-                  <img
-                    class="img"
-                    src="./images/img11.jpg"
-                    alt="Bank App screens"
-                  >
+          <ul class="list-works list">
+            <li class="list-works-item">
+              <a class="link" href="">
+                <img
+                  class="img"
+                  src="./images/img11.jpg"
+                  alt="Bank App screens"
+                >
+                <div class="container-works-item">
                   <h2 class="title-list-works">
                     Banking App Interface Concept
                   </h2>
                   <p class="text-list-works">App</p>
-                </a>
-              </li>
-              <li class="list-works-item">
-                <a class="link" href="">
-                  <img
-                    class="img"
-                    src="./images/img22.jpg"
-                    alt="blue ground"
-                    width="360"
-                  >
+                </div>
+              </a>
+            </li>
+            <li class="list-works-item">
+              <a class="link" href="">
+                <img
+                  class="img"
+                  src="./images/img22.jpg"
+                  alt="blue ground"
+                  width="360"
+                >
+                <div class="container-works-item">
                   <h2 class="title-list-works">Cashless Payment</h2>
                   <p class="text-list-works">Marketing</p>
-                </a>
-              </li>
-              <li class="list-works-item">
-                <a class="link" href="">
-                  <img
-                    class="img"
-                    src="./images/img33.jpg"
-                    alt="App for PC and Handy"
-                    width="360"
-                  >
+                </div>
+              </a>
+            </li>
+            <li class="list-works-item">
+              <a class="link" href="">
+                <img
+                  class="img"
+                  src="./images/img33.jpg"
+                  alt="App for PC and Handy"
+                  width="360"
+                >
+                <div class="container-works-item">
                   <h2 class="title-list-works">Meditaion App</h2>
                   <p class="text-list-works">App</p>
-                </a>
-              </li>
-              <li class="list-works-item">
-                <a class="link" href="">
-                  <img
-                    class="img"
-                    src="./images/img44.jpg"
-                    alt="Car salon"
-                    width="360"
-                  >
+                </div>
+              </a>
+            </li>
+            <li class="list-works-item">
+              <a class="link" href="">
+                <img
+                  class="img"
+                  src="./images/img44.jpg"
+                  alt="Car salon"
+                  width="360"
+                >
+                <div class="container-works-item">
                   <h2 class="title-list-works">Taxi Service</h2>
                   <p class="text-list-works">Marketing</p>
-                </a>
-              </li>
-              <li class="list-works-item">
-                <a class="link" href="">
-                  <img
-                    class="img"
-                    src="./images/img55.jpg"
-                    alt="Screenlocks"
-                    width="360"
-                  >
+                </div>
+              </a>
+            </li>
+            <li class="list-works-item">
+              <a class="link" href="">
+                <img
+                  class="img"
+                  src="./images/img55.jpg"
+                  alt="Screenlocks"
+                  width="360"
+                >
+                <div class="container-works-item">
                   <h2 class="title-list-works">Screen Illustrations</h2>
                   <p class="text-list-works">Design</p>
-                </a>
-              </li>
-              <li class="list-works-item">
-                <a class="link" href="">
-                  <img
-                    class="img"
-                    src="./images/img66.jpg"
-                    alt="Girl listen music"
-                    width="360"
-                  >
+                </div>
+              </a>
+            </li>
+            <li class="list-works-item">
+              <a class="link" href="">
+                <img
+                  class="img"
+                  src="./images/img66.jpg"
+                  alt="Girl listen music"
+                  width="360"
+                >
+                <div class="container-works-item">
                   <h2 class="title-list-works">Online Courses</h2>
                   <p class="text-list-works">Marketing</p>
-                </a>
-              </li>
-              <li class="list-works-item">
-                <a class="link" href="">
-                  <img
-                    class="img"
-                    src="./images/img77.jpg"
-                    alt="Design screens in App"
-                    width="360"
-                  >
+                </div>
+              </a>
+            </li>
+            <li class="list-works-item">
+              <a class="link" href="">
+                <img
+                  class="img"
+                  src="./images/img77.jpg"
+                  alt="Design screens in App"
+                  width="360"
+                >
+                <div class="container-works-item">
                   <h2 class="title-list-works">Instagram Stories Concept</h2>
                   <p class="text-list-works">Design</p>
-                </a>
-              </li>
-              <li class="list-works-item">
-                <a class="link" href="">
-                  <img
-                    class="img"
-                    src="./images/img88.jpg"
-                    alt="Vegetables in a bag"
-                    width="360"
-                  >
+                </div>
+              </a>
+            </li>
+            <li class="list-works-item">
+              <a class="link" href="">
+                <img
+                  class="img"
+                  src="./images/img88.jpg"
+                  alt="Vegetables in a bag"
+                  width="360"
+                >
+                <div class="container-works-item">
                   <h2 class="title-list-works">Organic Food</h2>
                   <p class="text-list-works">Web Site</p>
-                </a>
-              </li>
-              <li class="list-works-item">
-                <a class="link" href="">
-                  <img
-                    class="img"
-                    src="./images/img99.jpg"
-                    alt="Making coffee"
-                    width="360"
-                  >
+                </div>
+              </a>
+            </li>
+            <li class="list-works-item">
+              <a class="link" href="">
+                <img
+                  class="img"
+                  src="./images/img99.jpg"
+                  alt="Making coffee"
+                  width="360"
+                >
+                <div class="container-works-item">
                   <h2 class="title-list-works">Fresh Coffee</h2>
                   <p class="text-list-works">Web Site</p>
-                </a>
-              </li>
-            </ul>
-          </div>
+                </div>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
